--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<DOCTYPE! html>
-  <html>
-    <head>
-      <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-      
-    </body>
-  </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Movie Website</title>
+</head>
+<body>
+    <header>
+        <form>
+            <input type="text" placeholder="Search for a movie...">
+        </form>
+    </header>
+    <main>
+        <!-- Movie content will be dynamically loaded here -->
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
