--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Movie Website</title>
+    <title>Movie Display Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <form>
-            <input type="text" placeholder="Search for a movie...">
-        </form>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="movies.html">Movies</a></li>
+                <li><a href="tv_shows.html">TV Shows</a></li>
+                <li><a href="games_apps.html">Games & Apps</a></li>
+                <li><a href="collections.html">Collections</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-        <!-- Movie content will be dynamically loaded here -->
+        <!-- Main content of the website goes here -->
     </main>
-    <script src="script.js"></script>
+
+    <footer>
+        <p>&copy; 2024 Movie Display Website</p>
+    </footer>
 </body>
 </html>
