--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head> 
 <body>
+  <div>
     <header>
         <nav>
             <ul>
@@ -19,7 +20,7 @@
             </ul>
         </nav>
     </header>
-
+  </div>
     <main>
         <!-- Main content of the website goes here -->
     </main>
