--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Display Website</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Home</title>
 </head> 
 <body>
   <div>
