--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div>
     <header>
         <nav>
+            <form>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="movies.html">Movies</a></li>
@@ -19,9 +20,11 @@
                 <li><a href="collections.html">Collections</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
+                <input type="text" placeholder="Search for a movie...">
+            </form>
         </nav>
     </header>
-  </div>
+  
     <main>
         <!-- Main content of the website goes here -->
     </main>
@@ -29,5 +32,6 @@
     <footer>
         <p>&copy; 2024 Movie Display Website</p>
     </footer>
+    </div>
 </body>
 </html>
