--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div>
     <header>
         <nav>
-            <form>
+          <div class="List">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="movies.html">Movies</a></li>
@@ -19,9 +19,8 @@
                 <li><a href="games_apps.html">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
-            </ul>
-                <input type="text" placeholder="Search for a movie...">
-            </form>
+            </ul>   
+          </div>
         </nav>
     </header>
   
