--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             
             <ul>
-                <li><a href="movies.html" class="active">Movies</a></li>
+                <li><a href="index.html" class="active">Movies</a></li>
                 <li><a href="games.html">Games & Apps</a></li>
                 <li><a href="collections.html">Collections</a></li>
                 <li><a href="tv.html">TV Shows</a></li>
