--- a/collections.html
+++ b/collections.html
@@ -22,7 +22,7 @@
             </div>
            
             <ul>
-                <li><a href="movies.html">Movies</a></li>
+                <li><a href="index.html">Movies</a></li>
                 <li><a href="games.html">Games & Apps</a></li>
                 <li><a href="collections.html" class="active">Collections</a></li>
                 <li><a href="tv.html">TV Shows</a></li>
