--- a/feedback.html
+++ b/feedback.html
@@ -72,7 +72,7 @@
                 </div>
                
                 <ul>
-                    <li><a href="movies.html">Movies</a></li>
+                    <li><a href="index.html">Movies</a></li>
                     <li><a href="games.html">Games & Apps</a></li>
                     <li><a href="collections.html">Collections</a></li>
                     <li><a href="tv.html">TV Shows</a></li>
