--- a/collections.html
+++ b/collections.html
@@ -257,7 +257,32 @@
     <script src="app.js"></script>
     
     </article>
-    
+         <footer class="footer">
+                <div>
+                    <a href="https://www.warnerbros.com/company" target="_blank" style="text-decoration: none;"><h4>Company</h4></a>
+                    <h4>TV Series</h4>
+                    <h4>Animated Movies</h4>
+                </div>
+                <div>
+                    <a href="https://www.warnermediaprivacy.com/policycenter/b2c/wm/" target="_blank" style="text-decoration: none;">
+                        <h4>Privacy Policy</h4></a>
+                    <h4>Cookie Policy</h4>
+                    <h4>Terms of Use</h4>
+                </div>
+                <div>
+                   <a href="https://www.warnerbros.com/help/faq" target="_blank" style="text-decoration: none;"><h4>Help Center</h4></a>
+                    <h4>Support</h4>
+                    <h4>FAQ</h4>
+                </div>
+                <div>
+                    <h4>Follow Us</h4>
+                    <div class="footer-social">
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                </div>
+            </footer>
 </body>
 
 </html>
