--- a/tv.html
+++ b/tv.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Sen:wght@400;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <title>Games & Apps</title>
+    <title>TV Shows</title>
 </head>
 
 <body>
@@ -117,32 +117,7 @@
                     </div>
                     <i class="fas fa-chevron-right arrow"></i>
                 </div>
-                     <footer class="footer">
-                <div>
-                    <a href="https://www.warnerbros.com/company" target="_blank" style="text-decoration: none;"><h4>Company</h4></a>
-                    <h4>TV Series</h4>
-                    <h4>Animated Movies</h4>
-                </div>
-                <div>
-                    <a href="https://www.warnermediaprivacy.com/policycenter/b2c/wm/" target="_blank" style="text-decoration: none;">
-                        <h4>Privacy Policy</h4></a>
-                    <h4>Cookie Policy</h4>
-                    <h4>Terms of Use</h4>
-                </div>
-                <div>
-                   <a href="https://www.warnerbros.com/help/faq" target="_blank" style="text-decoration: none;"><h4>Help Center</h4></a>
-                    <h4>Support</h4>
-                    <h4>FAQ</h4>
-                </div>
-                <div>
-                    <h4>Follow Us</h4>
-                    <div class="footer-social">
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-facebook-f"></i>
-                        <i class="fa-brands fa-twitter"></i>
-                    </div>
-                </div>
-            </footer>
+        
             </div>
          
         </div>
